# Eskwelabs-T3amSiomai-Sprint-2-Child-Mortality

./: adaboost_smoteen.pkl  app.py  app1.py  model.pkl  requirements.txt
.streamlit/: pyproject.toml  streamlit_theme.toml
data/: mortality_data.csv  preprocessed_dhs_dummies.csv
