
[tool.poetry]
name = "streamlit-iris-predictor"
version = "0.1.0"
description = "A Streamlit app to predict iris species"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
scikit-learn = "^0.24.0"
numpy = "^1.21.0"

[tool.streamlit.theme]
primaryColor = "#CDCCE9"
backgroundColor = "#ffffff"
secondaryBackgroundColor = "#CAD7E9"
textColor = "#041E50"
font = "sans serif"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
